B5 - DevOps/bernstein/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll
spec:
  selector:
    matchLabels:
      app: poll
  replicas: 2
  template:
    metadata:
      labels:
        app: poll
    spec:
      containers:
      - name: poll-container
        image: epitechcontent/t-dop-600-poll:k8s
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128M
      restartPolicy: Always
