B5 - DevOps/bernstein/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 0
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-container
        image: redis:5.0
        ports:
        - containerPort: 6379
      restartPolicy: Always
