B5 - DevOps/bernstein/result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
spec:
  selector:
    matchLabels:
      app: result
  replicas: 2
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result-container
        image: epitechcontent/t-dop-600-result:k8s
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128M
      restartPolicy: Always
