B5 - DevOps/bernstein/traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
  labels:
    k8s-app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
        k8s-app: traefik
  template:
    metadata:
      labels:
        k8s-app: traefik
        name: traefik
    spec:
      containers:
        - image: traefik:1.7
          name: traefik-ingress-lb
          ports:
            - containerPort: 80
            - containerPort: 8080
          args:
            - --web
            - --kubernetes
      restartPolicy: Always
