B5 - DevOps/bernstein/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  replicas: 0
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker-container
        image: epitechcontent/t-dop-600-worker:k8s
        resources:
          limits:
            memory: 256M
      restartPolicy: Always
