B5 - DevOps/bernstein/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
spec:
  selector:
    app: poll
  ports:
  - port: 80
    targetPort: 80
